<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_show_more"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShowMoreActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topBar_show_more"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/artsy_blue_dark"
        app:navigationIcon="@drawable/back_arrow"
        app:theme="@style/SearchViewMy">

        <TextView
            android:id="@+id/topBarText_show_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:maxLines="1"/>

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/loading_third_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextColor="@color/artsy_blue_shallow"
            app:tabIndicatorColor="@color/artsy_blue_shallow"
            app:tabIconTint="@color/light_orange">
            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:icon="@drawable/detail_icon"/>
            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/artwork"
                android:icon="@drawable/artwork_icon"/>
        </com.google.android.material.tabs.TabLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ProgressBar
                android:id="@+id/loadingThird"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:indeterminateTint="@color/artsy_blue_shallow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.464" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loadingThird"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/two_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabTextColor="@color/artsy_blue_dark"
        app:tabIndicatorColor="@color/artsy_blue_dark"
        app:tabIconTint="@color/light_orange">
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>