<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/loading_first_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/initial_bg">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/loadingFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:indeterminateTint="@color/artsy_blue_shallow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.499" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/artsy_blue_dark"
        app:theme="@style/SearchViewMy">

        <TextView
            android:id="@+id/searchBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="22sp"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/dateTime"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@color/white"
        android:fontFamily="Aria"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:textColor="@color/grey"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:divider="@drawable/divider"
        android:showDividers="middle|beginning"
        android:id="@+id/favorite_section">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorites"
            android:textStyle="bold"
            android:textSize="17sp"
            android:background="@color/initial_bg"
            android:paddingVertical="3dp"
            android:textColor="@color/black"
            android:paddingStart="15dp"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scroll_view_favorite">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/initial_bg"
                    android:id="@+id/favorite_recycler_view" />

                <Button
                    android:id="@+id/artsyLinkButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:text="@string/powered"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:textAllCaps="false"
                    android:focusable="false"
                    android:textColor="@color/grey" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>


</LinearLayout>